<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity"
    android:background="@color/white">


    <LinearLayout
        android:id="@+id/loginDataSet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/instagramTextLogo"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:src="@drawable/instagram_text_logo" />

        <EditText
            android:id="@+id/emaiEditText"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/round_borders_edittext"
            android:fontFamily="sans-serif"
            android:hint="email or username"
            android:paddingLeft="10dp"
            android:inputType="text"
            android:maxLines="1"
            android:focusable="auto"
            android:elevation="1dp"/>

        <EditText
            android:id="@+id/passwrodEditText"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/round_borders_edittext"
            android:hint="Password"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:maxLines="1"
            android:focusable="auto"
            android:elevation="1dp"/>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/insta_buttons_styling"
            android:text="Log In"
            android:textAllCaps="false"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/forgot_your_details"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/getHelpTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_text"
                android:textStyle="bold"
                android:textSize="15dp"/>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp">

            <View
                android:layout_width="120dp"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:alpha="0.2"
                android:background="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:text="OR"
                android:textSize="15sp" />

            <View
                android:layout_width="120dp"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:alpha="0.2"
                android:background="@color/black" />

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/facebook_login"
            android:textColor="#3897F0"
            android:textSize="15sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>